--- a/templates/game.html
+++ b/templates/game.html
@@ -26,8 +26,8 @@
   </div>
 </div>
 
-<div class="box_container">
-  <div class="box">
+<div class="box_container protocol_in">
+  <div class="box w-100">
     {% if game.protocol['rounds'] and not game.deleted %}
       <div class="d-flex flex-wrap">
         {% for team in (game.team1, game.team2) %}
@@ -54,69 +54,71 @@
       </div>
       {% set rounds = game.protocol['rounds'] %}
       {% set round_types = [(1, '→'), (2, '←'), (3, '⇄'), (4, '⇆')] %}
-      <table class="protocol-table m-2 rounded" id="protocol">
-        <tr class="table_header">
-          <th>№</th>
-          <th>Команда</th>
-          <th>Баллы</th>
-          <th>Задача</th>
-          <th>Вызов</th>
-          <th>Баллы</th>
-          <th>Команда</th>
-          <th>Жюри</th>
-          <th>Дополнительная информация</th>
-        </tr>
-        {% for round in rounds %}
+      <div class="protocol_in">
+        <table class="protocol-table m-2 rounded" id="protocol">
+          <tr class="table_header">
+            <th>№</th>
+            <th>Команда</th>
+            <th>Баллы</th>
+            <th>Задача</th>
+            <th>Вызов</th>
+            <th>Баллы</th>
+            <th>Команда</th>
+            <th>Жюри</th>
+            <th>Дополнительная информация</th>
+          </tr>
+          {% for round in rounds %}
+            <tr class="round_form">
+              <td class="row_number symbols">{{loop.index}}</td>
+              <td class="player">
+                {{round['teams'][0]['player']['fullname']}}
+              </td>
+              <td class="points symbols">
+                {{round['teams'][0]['points']}}
+              </td>
+              <td class="symbols">
+                {{round['problem']}}
+              </td>
+              <td class="type symbols">
+                {{round_types[round['type'] - 1][1]}}
+              </td>
+              <td class="points symbols">
+                {{round['teams'][1]['points']}}
+              </td>
+              <td class="player">
+                {{round['teams'][1]['player']['fullname']}}
+              </td>
+              <td class="points judge_points symbols">
+                {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
+              </td>
+              <td><textarea name="additional" disabled>{{round['additional']}}</textarea></td>
+            </tr>
+          {% endfor %}
           <tr class="round_form">
-            <td class="row_number symbols">{{loop.index}}</td>
-            <td class="player">
-              {{round['teams'][0]['player']['fullname']}}
+            <td class="row_number symbols">Итого</td>
+            <td>
             </td>
             <td class="points symbols">
-              {{round['teams'][0]['points']}}
+              {{game.protocol['points'][0]}}
             </td>
-            <td class="symbols">
-              {{round['problem']}}
+            <td>
+
             </td>
             <td class="type symbols">
-              {{round_types[round['type'] - 1][1]}}
+
             </td>
             <td class="points symbols">
-              {{round['teams'][1]['points']}}
+              {{game.protocol['points'][1]}}
             </td>
-            <td class="player">
-              {{round['teams'][1]['player']['fullname']}}
+            <td>
             </td>
             <td class="points judge_points symbols">
-              {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
+              {{game.protocol['points'][2]}}
             </td>
-            <td><textarea name="additional" disabled>{{round['additional']}}</textarea></td>
+            <td></td>
           </tr>
-        {% endfor %}
-        <tr class="round_form">
-          <td class="row_number symbols">Итого</td>
-          <td>
-          </td>
-          <td class="points symbols">
-            {{game.protocol['points'][0]}}
-          </td>
-          <td>
-
-          </td>
-          <td class="type symbols">
-
-          </td>
-          <td class="points symbols">
-            {{game.protocol['points'][1]}}
-          </td>
-          <td>
-          </td>
-          <td class="points judge_points symbols">
-            {{game.protocol['points'][2]}}
-          </td>
-          <td></td>
-        </tr>
-      </table>
+        </table>
+      </div>
   {% elif game.is_deleted %}
   <h4 style="color: red;">Игра удаленна</h4>
   {% else %}
