--- a/templates/league_console.html
+++ b/templates/league_console.html
@@ -85,7 +85,7 @@
                   {% include 'team_options.html' %}
                 </select>
               </fieldset>
-              <label class="label-bold">Судья:</label>
+              <label class="label-bold">Судья: *</label>
               <input class="input-wide game-judge editor-email" 
                      name="judge_email"
                      type="email" 
