--- a/templates/prepare_to_game.html
+++ b/templates/prepare_to_game.html
@@ -13,7 +13,7 @@
   </h1>
 </div>
 
-<form class="box"
+<form class="box non_space_box"
       method="post"
       autocomplete="off">
   {{form.hidden_tag()}}
