--- a/templates/game_console.html
+++ b/templates/game_console.html
@@ -6,12 +6,22 @@
 
 {% block content %}
 <div class="hidden" id="game_id">{{game.id}}</div>
+<div class="hidden" id="game_status">{{game.status}}</div>
 
 <div class="box d-flex flex-wrap justify-content-between">
   <div class="mdr-2">
     <a class="btn button_primary" href="/prepare_to_game/{{game.id}}">
       <– Участники
     </a>
+    {% if game.status in (1, 3) %}
+      <button class="btn button_primary start_editing">
+        {% if game.status == 1 %}
+          Начать игру
+        {% else %}
+          Начать редактирование
+        {% endif %}
+      </button>
+    {% endif %}
   </div>
   <div class="mdlr-2 h4">
     {{game.title}}
@@ -126,7 +136,7 @@
         <span class="star enabled remove">*</span>
       </template>
       <div class="protocol_in">
-        <table class="protocol-table m-2 rounded" id="protocol">
+        <table class="protocol-table m-2 rounded" id="protocol" disabled>
           <tr class="table_header">
             <th>№</th>
             <th>Команда</th>
@@ -138,53 +148,55 @@
             <th>Жюри</th>
             <th>Дополнительная информация</th>
           </tr>
-          {% if 'rounds' in game.protocol %}
-            {% set rounds = game.protocol['rounds'] %}
-          {% else %}
-            {% set rounds = [game.default_round(),] %}
-          {% endif %}
-          {% for round in rounds %}
-            <tr class="round_form">
-              <td class="row_number symbols">{{loop.index}}</td>
-              <td class="player">
-                {{select_players(game.protocol['teams'][0]['players'], 1,
-                                round['teams'][0]['player']['id'])}}
-                {{stars_block(1, round['teams'][0].get('stars', 0))}}
-              </td>
-              <td class="points symbols">
-                {{input_points(1, round['teams'][0]['points'])}}
-              </td>
-              <td class="symbols">
-                <input type="number" name="problem" value="{{round['problem']}}">
-              </td>
-              <td class="type symbols">
-                <select name="type">
-                  {% for val, type in round_types %}
-                    {% if val == round['type'] %}
-                      <option value="{{val}}" selected>{{type}}</option>
-                    {% else %}
-                      <option value="{{val}}">{{type}}</option>
-                    {% endif %}
-                  {% endfor %}
-                </select>
-              </td>
-              <td class="points symbols">
-                {{input_points(2, round['teams'][1]['points'])}}
-              </td>
-              <td class="player">
-                {{select_players(game.protocol['teams'][1]['players'], 2,
-                                  round['teams'][1]['player']['id'])}}
-                {{stars_block(2, round['teams'][1].get('stars', 0))}}
-              </td>
-              <td class="points judge_points symbols">
-                {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
-              </td>
-              <td><textarea name="additional">{{round['additional']}}</textarea></td>
-            </tr>
-          {% endfor %}
+          <div class="rounds">
+            {% if 'rounds' in game.protocol %}
+              {% set rounds = game.protocol['rounds'] %}
+            {% else %}
+              {% set rounds = [game.default_round(),] %}
+            {% endif %}
+            {% for round in rounds %}
+              <tr class="round_form">
+                <td class="row_number symbols">{{loop.index}}</td>
+                <td class="player">
+                  {{select_players(game.protocol['teams'][0]['players'], 1,
+                                  round['teams'][0]['player']['id'])}}
+                  {{stars_block(1, round['teams'][0].get('stars', 0))}}
+                </td>
+                <td class="points symbols">
+                  {{input_points(1, round['teams'][0]['points'])}}
+                </td>
+                <td class="symbols">
+                  <input type="number" name="problem" value="{{round['problem']}}">
+                </td>
+                <td class="type symbols">
+                  <select name="type">
+                    {% for val, type in round_types %}
+                      {% if val == round['type'] %}
+                        <option value="{{val}}" selected>{{type}}</option>
+                      {% else %}
+                        <option value="{{val}}">{{type}}</option>
+                      {% endif %}
+                    {% endfor %}
+                  </select>
+                </td>
+                <td class="points symbols">
+                  {{input_points(2, round['teams'][1]['points'])}}
+                </td>
+                <td class="player">
+                  {{select_players(game.protocol['teams'][1]['players'], 2,
+                                    round['teams'][1]['player']['id'])}}
+                  {{stars_block(2, round['teams'][1].get('stars', 0))}}
+                </td>
+                <td class="points judge_points symbols">
+                  {{12 - round['teams'][0]['points'] - round['teams'][1]['points']}}
+                </td>
+                <td><textarea name="additional">{{round['additional']}}</textarea></td>
+              </tr>
+            {% endfor %}
+          </div>
         </table>
       </div>
-      <div class="d-flex flex-wrap justify-content-between">
+      <div class="d-flex flex-wrap justify-content-between" id="protocol_buttons">
         <div class="buttons-menu">
           <button class="btn button_primary add_round">
             Добавить строку
@@ -194,8 +206,12 @@
           <button class="btn button_success save">
             Сохранить
           </button>
-          <button class="btn button_warning save_and_quit">
-            Сохранить и выйти
+          <button class="btn button_warning end_editing">
+            {% if game.status == 3 %}
+              Закончить редактирование
+            {% else %}
+              Закончить игру
+            {% endif %}
           </button>
         </div>
       </div>
