--- a/templates/game_console.html
+++ b/templates/game_console.html
@@ -135,8 +135,8 @@
       <template id="star_template">
         <span class="star enabled remove">*</span>
       </template>
-      <div class="protocol_in">
-        <table class="protocol-table m-2 rounded" id="protocol" disabled>
+      <div class="protocol_in big_table_container">
+        <table class="info_table protocol-table m-2 rounded" id="protocol">
           <tr class="table_header">
             <th>№</th>
             <th>Команда</th>
