--- a/templates/league.html
+++ b/templates/league.html
@@ -18,17 +18,59 @@
   </h5>
   {% if current_user.id in (1, league.tournament.chief_id, league.chief_id,) %}
     <div class="link_menu">
-      <a class="link link-small" href='/league_console/{{league.id}}'>
+      <a class="link-small" href='/league_console/{{league.id}}'>
         управлять
       </a>
     </div>
   {% endif %}
 </div>
-<div class="box_container" style="margin-top: 0;">
-  <div class="page_description box">
-    {{league.description}}
+
+{% if league.description %}
+  <div class="box_container" style="margin-top: 0;">
+    <div class="page_description box">
+      {{league.description}}
+    </div>
+  </div>
+{% endif %}
+
+{% set teams, table, result = league.get_table() %}
+{% macro team_th(team) %}
+  <th class="team_name"><a class="shadow_link" href="{{team.link()}}">{{team.name}}</a></th>
+{% endmacro %}
+<div class="box_container">
+  <div class="box w-100">
+    <div class="shadow-box__title">
+      Результаты
+    </div>
+    <div class="big_table_container">
+      <table class="info_table league_table m-2 rounded">
+        <tr>
+          <td></td>
+          {% for team in teams %}
+            {{team_th(team)}}
+          {% endfor %}
+          <td>Сумма баллов</td>
+        </tr>
+        {% for row in table %}
+          <tr>
+            {{team_th(teams[loop.index0])}}
+            {% for cell in row %}
+              <td class="game_cell">
+                {% for res, game in cell %}
+                  <a class="shadow_link" href="{{game.link()}}">
+                    {{res}}{% if not loop.last %}, {% endif %}
+                  </a>
+                {% endfor %}
+              </td>
+            {% endfor %}
+            <td class="team_points">{{result[loop.index0]}}</td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
   </div>
 </div>
+
 <div class="box_container">
   <div class="box box-tiny">
     <div class="shadow-box__title">
@@ -64,5 +106,6 @@
     {% endfor %}
   </div>
 </div>
+
 
 {% endblock content %}
