edit config + base info for vk

--- a/templates/vk/vk_init.html
+++ b/templates/vk/vk_init.html
@@ -1,9 +1,8 @@
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 <script type="text/javascript">
     VK.init({
-        apiId: 7491040
+        apiId: {{ client_id }}
     });
 </script>
 <h6 hidden="true" id="groupId">{{ group_id }}</h6>
 <h6 hidden="true" id="clientId">{{ client_id }}</h6>
-<h6 hidden="true" id="screenName">{{ screen_name }}</h6>
