--- a/templates/team.html
+++ b/templates/team.html
@@ -23,7 +23,7 @@
                               | sort(reverse=True, attribute="created_at") %}
     <div class="centered_block block_link" 
          onclick="redirect(event)" 
-         href="/game/{{game.id}}"
+         href="{{game.link}}"
     >
       <h2 class="item_title">{{game.title}}</h2>
       <div class="description">
@@ -39,7 +39,7 @@
     {% for player in team.players %}
       <div class="centered_block block_link" 
            onclick="redirect(event)" 
-           href="/profile/{{player.id}}"
+           href="{{player.link}}"
       >
         <h5 class="item_title">{{player.fullname}}</h5>
       </div>
@@ -58,7 +58,7 @@
       <dt class="col-sm-9">{{team_status(team)}}</dt>
       <dd class="col-sm-3">Турнир:</dd>
       <dt class="col-sm-9">
-        <a href="/tournament/{{team.tournament.id}}">
+        <a href="{{team.tournament.link}}">
           {{team.tournament.title}}
         </a>
       </dt>
