--- a/templates/game_console.html
+++ b/templates/game_console.html
@@ -10,7 +10,7 @@
 
 <div class="box d-flex flex-wrap justify-content-between">
   <div class="mdr-2">
-    <a class="btn button_primary" href="{{game.link}}/prepare">
+    <a class="btn button_primary" href="/prepare_to_game/{{game.id}}">
       <– Участники
     </a>
     {% if game.status in (1, 3) %}
