--- a/templates/base.html
+++ b/templates/base.html
@@ -44,27 +44,55 @@
   <body>
     {% block header %}
     <header class="">
-      <nav class="navbar navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand logo", href="/">MatBoy</a>
-        <div class="login_manager">
-            {% if current_user.is_authenticated %}
-              <a 
-                class="navbar-brand"  
-                href="/profile/{{current_user.id}}"
-              >
-                {{ current_user.name }}
-              </a>
-              <a class="btn button_primary" onclick="redirectWithStep(event);" href="/logout">
-                Выйти
-              </a>
-            {% else %}
-              <a class="btn button_success" onclick="redirectWithStep(event);" href="/register">
-                Зарегистрироваться
-              </a>
-              <a class="btn button_primary" onclick="redirectWithStep(event)" href="/login">
-                Войти
-              </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+          
+          
+          <ul class="navbar-nav mr-auto">
+            {% if menu %}
+              {% for title, link in menu %}
+                {% if loop.last %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" disabled>
+                      {{title}}
+                      <span class="sr-only">(current)</span>
+                    </a>
+                  </li>
+                {% else %}
+                  <li class="nav-item active">
+                    <a class="nav-link" href="{{link}}">
+                      {{title}}
+                    </a>
+                  </li>
+                {% endif %}
+              {% endfor %}
             {% endif %}
+          </ul>
+
+          <div class="login_manager">
+              {% if current_user.is_authenticated %}
+                <a 
+                  class="navbar-brand"  
+                  href="/profile/{{current_user.id}}"
+                >
+                  {{ current_user.name }}
+                </a>
+                <a class="btn button_primary" onclick="redirectWithStep(event);" href="/logout">
+                  Выйти
+                </a>
+              {% else %}
+                <a class="btn button_success" onclick="redirectWithStep(event);" href="/register">
+                  Зарегистрироваться
+                </a>
+                <a class="btn button_primary" onclick="redirectWithStep(event)" href="/login">
+                  Войти
+                </a>
+              {% endif %}
+          </div>
         </div>
       </nav>
     </header>
