edit autocomplete + forms

--- a/templates/vk/vk_reg.html
+++ b/templates/vk/vk_reg.html
@@ -9,7 +9,7 @@
     <img src="{{url_for('static', filename='logo/vk_logo.png')}}" 
     width="24" height="22" 
     alt="VK" 
-    style="vertical-align: text-bottom; margin: 10px">
+    style="vertical-align: text-bottom; margin-right: 10px">
     <b>Регистрация через ВКонтакте</b>
     </p>
 </div>
