--- a/templates/vk/vk_auth.html
+++ b/templates/vk/vk_auth.html
@@ -2,5 +2,5 @@
 
 <div id="vk_auth" style="width: 100%; align-self: center; margin-bottom: 3vh"></div>
 <script type="text/javascript">
-    VK.Widgets.Auth("vk_auth", {"authUrl":"/", "width": "380"});
+    VK.Widgets.Auth("vk_auth", {"authUrl":"/login", "width": "380"});
 </script>
