fix registration & auth

--- a/templates/toasts.html
+++ b/templates/toasts.html
@@ -47,7 +47,7 @@
       <div role="alert"
           aria-live="assertive" 
           aria-atomic="true" 
-          class="toast" 
+          class="toast on_ready_toast" 
           data-autohide="true"
           data-delay="4096">
         <div class="toast-header bg-danger">
